--- a/blog-fe/package.json
+++ b/blog-fe/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^5.1.1",
     "axios": "^1.7.7",
+    "tinymce": "^7.3.0",
     "vue": "^3.4.21",
+    "vue-router": "^4.4.5",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
